# practical-ai-lab

./: .cursorrules  .env.example  .gitignore  README.md  SPECIFICATIONS.md  docker-compose.yml  pyproject.toml
docs/: LAB1_RAG.md  LAB2_AGENTS.md  SETUP.md  THEORY.md
lab1_rag/: app.py  pipeline.py
lab2_agents/: agent.py  cli.py  tools.py
shared/: generate_pdfs.py  utils.py
