[project]
name = "practical-ai-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name="Zaid Amireh", email="zaid@algollabs.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.50.0",
    "llama-index>=0.14.8",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-llms-openai>=0.6.9",
    "llama-index-vector-stores-qdrant>=0.9.0",
    "pydantic>=2.12.3",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.0",
    "reportlab>=4.4.5",
    "rich>=14.2.0",
]
